# Web_Scrape

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  cache.json  config.py  pyproject.toml  requirements.txt  scraped_data.csv  snapshots.db
app/: __init__.py  config.py  logging_config.py  main.py
app/api/: routes.py
app/controllers/: scrape_controller.py
app/models/: product_model.py  schemas.py
app/scrapers/: __init__.py  base.py  base_scraper.py  fakestore.py  fakestore_scraper.py  hacker_news.py  hackernews_scraper.py  reddit.py  reddit_scraper.py
app/services/: __init__.py  export_service.py  services.py  snapshot_service.py
app/utils/: __init__.py  cache_manager.py  decorators.py  rate_limiter.py
frontend/: index.html  style.css
static/: style.css
templates/: index.html
tests/: conftest.py  test_cache_manager.py  test_decorators.py  test_retry.py  test_routes.py  test_scrapers.py
